feat(backend): Curiosities & avatar events
